--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "pinia": "^2.1.7",
+    "unhead": "^1.8.10",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
